CANDLEPIN-252: Updated ConsumerCurator to not use Hibernate Criteria